--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,6 @@ compatibility_date = "2023-06-08"
 kv_namespaces = [
     { binding = "solux", id = "ab3d10767fd447da9a955784f4c36554", preview_id = "676b486f6c3249f39de90352c68e794d" }
 ]
+
+[triggers]
+crons = ["*/3 * * * *","0 */2 * * *"]
